fixed the overlap of profile page at home

--- a/micro-blogging/src/index.css
+++ b/micro-blogging/src/index.css
@@ -102,7 +102,7 @@ a:hover,
   font-weight: bold;
 }
 .user-box {
-  width: 37.5rem;
+  width: 40%;
   border: none;
 }
 #user-input-title,
